# autonomous_phri_init

./: CMakeLists.txt  LICENSE  README.md
etc/: PepperFSMController.in.yaml
launch/: display.launch  roman2020_display.rviz  simulation_display.launch
src/: CMakeLists.txt  PepperFSMController.cpp  PepperFSMController.h  lib.cpp
src/filters/: README.md
src/states/: CMakeLists.txt  FrameTest.cpp  FrameTest.h  IntentCommunication.cpp  IntentCommunication.h  MakeContactBack.cpp  MakeContactBack.h  MakeContactHand.cpp  MakeContactHand.h  MoveMobileBase.cpp  MoveMobileBase.h  NavigateToHuman.cpp  NavigateToHuman.h  PreContactBack.cpp  PreContactBack.h  PreContactHand.cpp  PreContactHand.h  RemoveContacts.cpp  RemoveContacts.h  StandStraight.cpp
src/states/models/: LShoulderRoll.model  RElbowRoll.model
